--- a/main.css
+++ b/main.css
@@ -39,6 +39,12 @@ body {
 	margin: auto;
 }
 
+@media only screen and (max-width: 400px){
+	body {
+		width: 100%;
+	}
+}
+
 section {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
