--- a/main.css
+++ b/main.css
@@ -39,9 +39,9 @@ body {
 	margin: auto;
 }
 
-@media only screen and (max-width: 400px){
+@media only screen and (max-width: 470px){
 	body {
-		width: 100%;
+		width: 100vw;
 	}
 }
 
